--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
-*.iml
-
+/reports
 ## Directory-based project format:
 .idea/
 # if you remove the above rule, at least ignore the following:
